# kohaku

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  KONJO_PROMPT.md  KONJO_QUALITY_FRAMEWORK.md  PLAN.md  README.md  ROADMAP.md  pyproject.toml  render.yaml
.claude/hooks/: on-stop.sh  post-edit.sh
.claude/skills/konjo-boot/: SKILL.md
.claude/skills/konjo-philosophy/: SKILL.md
.claude/skills/konjo-quality/: SKILL.md
.claude/skills/konjo-retrofit/: SKILL.md
.claude/skills/researcher/: SKILL.md
.github/workflows/: ci.yml  konjo-gate.yml
.konjo/hooks/: pre-commit
.konjo/scripts/: dry_check.py  install-hooks.sh  konjo_review.py
api/: Dockerfile  __init__.py  _helpers.py  conftest.py  main.py  models.py  requirements.txt  test_analogy_api.py  test_api.py  test_core_api.py  test_memories_api.py  test_namespaces_api.py  test_viz.py
api/routers/: agents.py  analogy.py  core.py  episodes.py  export.py  memories.py  memories_batch.py  memories_extra.py
benchmarks/: bench_analogy.py  bench_ann_rerank.py  bench_backends.py  bench_compositional.py  bench_extraction.py  bench_scans.py  run_benchmarks.py
benchmarks/results/20260617T215650Z_backends/: report.json
benchmarks/results/20260617T225907Z_backends/: report.json
benchmarks/results/20260618T011303Z_scans/: report.json
benchmarks/results/20260618T014017Z_ann_rerank/: report.json
benchmarks/results/20260618T015233Z_analogy/: report.json
benchmarks/results/20260618T022029Z_compositional/: report.json
benchmarks/results/20260618T022153Z_compositional/: report.json
benchmarks/results/20260618T030827Z_extraction/: report.json
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.css  App.tsx  index.css
dashboard/src/lib/: api.ts  mock.ts  types.ts
dashboard/src/views/: ConceptInput.tsx  DecayCurve.tsx  MemoryGraph.tsx  MetaInspector.tsx  PersistencePanel.tsx  QueryPanel.tsx
demo/: README.md  dashboard.html  demo.py  index.html  kohaku-live.html  memory_map.html  memory_map_cosmic.html  memory_map_cosmos.html  sample_memory.json  server.py
demo/archive/: memory_map_dashboard.html
examples/: analogy_demo.py  compositional_demo.py  extraction_demo.py
python/: kohaku.py  pyproject.toml
python/kohaku/: __init__.py  _accel.py  _async.py  _index.py  _pure.py  _query.py  analogy.py  ann.py  attention.py  bulk_ops.py  chaining.py  cli.py  compaction.py  compositional.py  conflicts.py  consolidation.py  context.py  decay.py  enriched.py  enriched_meta.py  episode.py  extraction.py  graph_export.py  hf_hooks.py  hopfield.py  importance.py  kyro_bridge.py  learning.py  memory_facade.py  memory_health.py  memory_system.py  openai_compat.py  persistence.py  portability.py  provenance.py  relationships.py  semantic.py  server.py  shared.py  sleep.py  (+6 more)
python/tests/: test_accel.py  test_analogy.py  test_ann.py  test_async.py  test_async_stores.py  test_attention.py  test_benchmarks.py  test_bulk_ops.py  test_chaining.py  test_compaction.py  test_compositional.py  test_conflicts.py  test_consolidation.py  test_context.py  test_decay.py  test_enriched.py  test_episode.py  test_extraction.py  test_forgetting_rate.py  test_graph_export.py  test_graphiti_mem0.py  test_hf_hooks.py  test_hopfield.py  test_importance.py  test_index.py  test_kyro_bridge.py  test_learning.py  test_memory_facade.py  test_memory_health.py  test_memory_system.py  test_openai_compat.py  test_persistence.py  test_portability.py  test_provenance.py  test_pure.py  test_relationships.py  test_semantic.py  test_server.py  test_shared.py  test_sleep.py  (+9 more)
scripts/: start.sh
src/: accel.rs  hypervector.rs  lib.rs  main.rs  memory.rs  pybindings.rs  retrieval.rs
tests/: integration_test.rs  test_compaction.py  test_streaming_consolidation.py  test_tenant.py
