[package]
name = "kohaku"
version = "0.1.0"
edition = "2021"
description = "Neural episodic memory via Hyperdimensional Computing"
license = "BUSL-1.1"
repository = "https://github.com/konjoai/kohaku"
keywords = ["hdc", "hypervector", "memory", "episodic", "llm"]

[lib]
name = "kohaku"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "kohaku"
path = "src/main.rs"

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
